[package]
name = "connex"
version = "0.1.0"
edition = "2021"
description = "A tcp communication library that supports custom encryption and decryption and automatic reconnection."
categories = ["network"]
repository = "https://github.com/noxue/connex.git"
readme = "README.md"
license = "MIT" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
