[package]
name = "connex"
version = "0.1.2"
edition = "2021"
description = "A tcp communication library that supports custom encryption and decryption and automatic reconnection."
categories = ["network-programming"]
repository = "https://github.com/noxue/connex.git"
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["client", "server"]
client = []
server = []
full = ["client", "server"]

[dependencies]
snafu = "0.8"
